# fdtd-lucuma

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  debian-ci.dockerfile  docker-compose.yaml
.github/workflows/: c-cpp.yml  docker-arch-linux.yml  docker-debian.yml  docker.yml
cmake/: SpirvTarget.cmake
pkg/: CMakeLists.txt
pkg/arch/: .gitignore  PKGBUILD  build-deps.sh  cmake_build_trace.json  install-deps.sh
pkg/ubuntu/: CMakeLists.txt  CPackConfig.cmake.in  dependencies.txt
share/: CMakeLists.txt
share/shaders/: CMakeLists.txt  fdtd_macros.slang  hello_world.slang  hello_world_double.slang  hello_world_float.slang  hello_world_half.slang  init_coefs.slang  init_coefs_double.slang  init_coefs_float.slang  init_coefs_half.slang  matrix.slang
share/shaders/utils/: matrix.slang  types.slang
src/: CMakeLists.txt  argument_parser.cpp  argument_parser.cppm  fdtd.cpp  fdtd.cppm  macros.hpp  main.cpp  simulator.cpp  simulator.cppm  test.cpp
src/components/: CMakeLists.txt  components.cppm  fdtd_data.cpp  fdtd_data.cppm
src/extra/: CMakeLists.txt  vma.cpp
src/legacy_headers/: CMakeLists.txt  entt.cppm  fmt.cppm  glm.cppm  mdspan.cppm  taskflow.cppm  xdg_utils_cxx.cppm  yaml_cpp.cppm
src/services/: CMakeLists.txt  argument_parser.cpp  argument_parser.cppm  compute.cpp  compute.cppm  file_reader.cpp  file_reader.cppm  instantiations.cpp  services.cppm  vulkan_all.cpp  vulkan_all.cppm  vulkan_context.cpp  vulkan_context.cppm  vulkan_core.cpp  vulkan_core.cppm  vulkan_debug.cpp  vulkan_debug.cppm  vulkan_debug_requirements.cpp  vulkan_debug_requirements.cppm  vulkan_device.cpp  vulkan_device.cppm
src/services/backends/: CMakeLists.txt  all_instantiator.cppm  backends.cppm  base.cppm  cpu_common.cpp  cpu_common.cppm  cpu_taskflow.cpp  cpu_taskflow.cppm  i_backend.cppm  instantiations.cpp  instantiator.cpp  instantiator.cppm  saver.cpp  saver.cppm  sequential.cpp  sequential.cppm  sequential_fdtd_data.cppm  single_instantiator.cpp  single_instantiator.cppm  utils.cppm  vulkan.cpp  vulkan.cppm
src/services/backends/vulkan_components/: CMakeLists.txt  fdtd_data.cppm  init_coefs_pipeline.cppm  utils.cpp  utils.cppm  vulkan_components.cppm
src/services/basic/: CMakeLists.txt  argument_parser.cpp  argument_parser.cppm  basic.cppm  file_reader.cpp  file_reader.cppm  instantiations.cpp  path.cpp  path.cppm  path_common.cpp  path_common.cppm  path_config.hpp.in  settings.cpp  settings.cppm  settings_enums.cppm
src/services/frontends/: CMakeLists.txt  frontends.cppm  headless.cpp  headless.cppm  instantiations.cpp
src/services/vulkan/: CMakeLists.txt  all.cpp  all.cppm  allocator.cpp  allocator.cppm  compute.cpp  compute.cppm  context.cpp  context.cppm  core.cpp  core.cppm  debug.cpp  debug.cppm  debug_requirements.cpp  debug_requirements.cppm  device.cpp  device.cppm  fwd.cppm  instantiations.cpp  instantiations.cppm  pipeline_builder.cpp  pipeline_builder.cppm  shader_loader.cpp  shader_loader.cppm  utils.cpp  utils.cppm  vulkan.cppm
src/utils/: CMakeLists.txt  alias.cppm  backend.cppm  exceptions.cpp  exceptions.cppm  injector-fwd.hpp  injector.cpp  injector.cppm  instantiations.cpp  mdspan.cppm  precision.cppm  print.cppm  save_as.cppm  utils.cppm  vulkan.cpp  vulkan.cppm
